@@ -65,40 +65,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="Deserialize">
-      <MemberSignature Language="C#" Value="public bool Deserialize (uint stream_length, out byte stream);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Boolean</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="stream_length" Type="System.UInt32" />
-        <Parameter Name="stream" Type="System.Byte&amp;" RefType="out" />
-      </Parameters>
-      <Docs>
-        <summary>Converts a serialized datastream, generated by <see cref="M:Gdk.Pixdata.Serialize" />, into pixdata.</summary>
-        <param name="stream_length">A <see cref="T:System.UInt32" /> describing the length of "stream".</param>
-        <param name="stream">a <see cref="T:System.Byte&amp;" /></param>
-        <returns>A <see cref="T:System.Boolean" />. True is successful, false if there was an error.</returns>
-        <remarks>As of gtk-sharp 0.98, this function uses a <see cref="T:Byte" /> for "stream" when it should be using a Byte []. Until this is fixed, this function will not work as intended.</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="Serialize">
-      <MemberSignature Language="C#" Value="public byte Serialize (out uint stream_length_p);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Byte</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="stream_length_p" Type="System.UInt32&amp;" RefType="out" />
-      </Parameters>
-      <Docs>
-        <summary>Generates serialized pixdata that can then be stored and converted back into a <see cref="T:Gdk.Pixdata" /> with <see cref="M:Gdk.Pixdata.Deserialize" />.</summary>
-        <param name="stream_length_p">A <see cref="T:System.UInt32&amp;" /> set to the length of the returned <see cref="T:System.Byte" />[].</param>
-        <returns>a <see cref="T:System.Byte" /></returns>
-        <remarks>As of gtk-sharp 0.98, this function returns a <see cref="T:Byte" /> when it should be returning a Byte []. Until this is fixed, this function will not work as intended.</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Magic">
       <MemberSignature Language="C#" Value="public uint Magic;" />
       <MemberType>Field</MemberType>
@@ -214,6 +180,37 @@
       <Docs>
         <summary>The height of the image in pixels.</summary>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Deserialize">
+      <MemberSignature Language="C#" Value="public bool Deserialize (uint stream_length, byte [] stream);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="stream_length" Type="System.UInt32" />
+        <Parameter Name="stream" Type="System.Byte[]" />
+      </Parameters>
+      <Docs>
+        <summary>Converts a serialized datastream, generated by <see cref="M:Gdk.Pixdata.Serialize" />, into pixdata.</summary>
+        <param name="stream_length">A <see cref="T:System.UInt32" /> describing the length of "stream".</param>
+        <param name="stream">a <see cref="T:System.Byte" /></param>
+        <returns>A <see cref="T:System.Boolean" />. True if successful, false if there was an error.</returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Serialize">
+      <MemberSignature Language="C#" Value="public byte [] Serialize ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Byte[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Generates serialized pixdata that can then be stored and converted back into a <see cref="T:Gdk.Pixdata" /> with <see cref="M:Gdk.Pixdata.Deserialize" />.</summary>
+        <returns>the serialized pixdata.<see cref="T:System.Byte[]" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
