@@ -96,25 +96,6 @@
   </Interfaces>
   <Attributes />
   <Members>
-    <Member MemberName="AffineRelative">
-      <MemberSignature Language="C#" Value="public void AffineRelative (out double [] affine);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="affine" Type="System.Double []&amp;" RefType="out" />
-      </Parameters>
-      <Docs>
-        <summary>
-          Combines the specified affine transformation matrix with the
-          item's current transformation.
-        </summary>
-        <param name="affine">Return value for an affine transformation matrix.</param>
-        <remarks>
-        </remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Lower">
       <MemberSignature Language="C#" Value="public void Lower (int positions);" />
       <MemberType>Method</MemberType>
@@ -306,25 +287,6 @@
         <param name="y1">Return value for the upper edge of the bounding box</param>
         <param name="x2">Return value for the rightmost edge of the bounding box</param>
         <param name="y2">Return value for the lower edge of the bounding box</param>
-        <remarks>
-        </remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="AffineAbsolute">
-      <MemberSignature Language="C#" Value="public void AffineAbsolute (out double [] affine);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="affine" Type="System.Double []&amp;" RefType="out" />
-      </Parameters>
-      <Docs>
-        <summary>
-          Makes the item's affine transformation matrix be equal to
-          the specified matrix.
-        </summary>
-        <param name="affine">Return value for an affine transformation matrix.</param>
         <remarks>
         </remarks>
       </Docs>
@@ -724,6 +686,44 @@
         <param name="clip_path">a <see cref="T:Art.SVP" /></param>
         <param name="flags">a <see cref="T:System.Int32" /></param>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="AffineAbsolute">
+      <MemberSignature Language="C#" Value="public void AffineAbsolute (double [] affine);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="affine" Type="System.Double[]" />
+      </Parameters>
+      <Docs>
+        <summary>
+          Makes the item's affine transformation matrix be equal to
+          the specified matrix.
+        </summary>
+        <param name="affine">The affine transformation set as the current transformation for the item.<see cref="T:System.Double" /></param>
+        <remarks>
+        </remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="AffineRelative">
+      <MemberSignature Language="C#" Value="public void AffineRelative (double [] affine);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="affine" Type="System.Double[]" />
+      </Parameters>
+      <Docs>
+        <summary>
+          Combines the specified affine transformation matrix with the
+          item's current transformation.
+        </summary>
+        <param name="affine">The affine transform to combine with the items current transform</param>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
   </Members>
