@@ -1,3 +1,11 @@
+2004-06-19  Larry Ewing  <lewing@ximian.com>
+
+	* en/Gnome/CanvasItem.xml: update the documentation no that
+	the binding has been fixed.
+
+	* en/Gdk/Pixdata.xml: fixup the Pixdata docs now that the binding
+	is fixed.
+
 2004-06-19  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/*.xml: fix examples so they compile, are children of
